UT and refactoring